# qgsw-pytorch

./: .gitignore  README.md  pyproject.toml
assets/: README.md
examples/: doublegyre.py  natl.py  vortexshear.py
src/: finite_diff.py  flux.py  helmholtz.py  helmholtz_multigrid.py  masks.py  qg.py  reconstruction.py  sw.py
