[project]
name = "pyqgsw"
version = "0.1.0"
description = "PyTorch implementation of multi-layer quasi-geostrophic (QG) and shallow-water (SW) models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "setuptools>=61.0",
    "scikit-image>=0.21.0",
    "netcdf4>=1.7.2",
]

[project.optional-dependencies]
realistic = [
    "scipy>=1.7.0",
    "netCDF4>=1.5.0",
    "scikit-image>=0.19.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "finite_diff",
    "flux", 
    "helmholtz_multigrid",
    "helmholtz",
    "masks",
    "qg",
    "reconstruction",
    "sw"
]

